--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image href="/assets/img/imgPortfolio.png"
+                                    <image href="./assets/img/tswira.png"
                                     class="home__blob-img"
                                     x="20"
                                     y="15"
@@ -130,7 +130,8 @@
                 <h2 class="section__title">About Me</h2>
                 <span class="section__subtitle">My introduction</span>
                 <div class="about__container container grid">
-                    <img src="/assets/img/about.jpg" alt="" class="about__img">
+                    <img src="./assets/img/about.jpg" alt="w" class="about__img"/>
+
                     <div class="about__data">
                         <p class="about__description">
                             Web Developer with experience building websites and web applications.I specialise in web Full stack developement (frontend or backend) based in Morocco.
