--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                             </div>
                         </div>
                         <div class="about__buttons">
-                            <a download="" href="/assets/pdf/cv-english.pdf" class="button button--flex">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
-                            <a download="" href="/assets/pdf/cv-francais.pdf" class="button button--flex ">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="./assets/pdf/cv-english.pdf" class="button button--flex">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="./assets/pdf/cv-francais.pdf" class="button button--flex ">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
 
                         </div>
                         
