--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h2 class="section__title">About Me</h2>
                 <span class="section__subtitle">My introduction</span>
                 <div class="about__container container grid">
-                    <img src="./assets/img/about.jpg" alt="w" class="about__img"/>
+                    <img src="./assets/img/about.jpg" alt="ww" class="about__img"/>
 
                     <div class="about__data">
                         <p class="about__description">
@@ -151,16 +151,16 @@
                                     certificats</span>
                             </div>
                             <div>
-                                <span class="about__info-title">10+</span>
+                                <span class="about__info-title">5+</span>
                                 <span class="about__info-name">
                                     Completed <br>
                                     project</span>
                             </div>
                         </div>
                         <div class="about__buttons">
-                            <a download="" href="./assets/pdf/cv-english.pdf" class="button button--flex">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
-                            <a download="" href="./assets/pdf/cv-francais.pdf" class="button button--flex ">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
-                            <a download="" href="./assets/pdf/cvdeutsch.pdf" class="button button--flex ">Download CV Germany<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-english.pdf" class="button button--flex">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-francais.pdf" class="button button--flex ">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-deutsh.pdf" class="button button--flex ">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
 
                         </div>
                         
@@ -392,11 +392,11 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Frontend use react and redux</p>
+                                        <p>Will create a medium- or large-scale professional website.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Backend use Laravel or NodeJs</p>
+                                        <p>Custom website with Backend use Laravel or NodeJs for the back end and React for the front end</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
