--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
                         <div class="about__buttons">
                             <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-english.pdf" class="button button--flex">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
-                            <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-francais.pdf" class="button button--flex ">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
+<!--                             <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-francais.pdf" class="button button--flex ">Download CV french<i class="uil uil-download-alt button__icon"></i></a> -->
                             <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-deutsh.pdf" class="button button--flex ">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
 
                         </div>
