--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                             </div>
                         </div>
                         <div class="about__buttons">
-                            <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-english.pdf" class="button button--flex">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
-<!--                             <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-francais.pdf" class="button button--flex ">Download CV french<i class="uil uil-download-alt button__icon"></i></a> -->
-                            <a download="" href="/Users/akrou/OneDrive/Bureau/portfolio/assets/pdf/cv-deutsh.pdf" class="button button--flex ">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="#" class="button button--flex" onclick="window.open('./assets/pdf/cv-english.pdf')">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-francais.pdf')">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
+                            <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-deutsh.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
 
                         </div>
                         
