--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -307,7 +307,7 @@
                          <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">
-                                    Bachlor Science Physics
+                                    High School Degree in Science Physics
                                 </h3>
                                 <span class="qualification__subtitle">
                                     Hassan II High School-Morocco
