--- a/index.html
+++ b/index.html
@@ -89,12 +89,20 @@
               >
                 <i class="uil uil-dribbble"></i>
               </a>
-              <a
+<!--               <a
                 href="https://github.com/Oussama-a-kroud"
                 class="home__social-icon"
                 target="_blank"
               >
                 <i class="uil uil-github-alt"></i>
+              </a> -->
+              <a
+                href="https://wa.me/+212666050879"
+                class="home__social-icon"
+                target="_blank"
+              >
+                
+                <i class="uil uil-whatsapp"></i>
               </a>
             </div>
 
