--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
               >
                 <i class="uil uil-dribbble"></i>
               </a> -->
+               <a
+                href="https://www.instagram.com/oussama___akroud/"
+                class="home__social-icon"
+                target="_blank"
+              >
+                <i class="uil uil-instagram"></i>
+              </a>
               <a
                 href="https://github.com/Oussama-a-kroud"
                 class="home__social-icon"
