--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
             </div>
           </div>
 
-          <form class="contact__form grid" action="" method="post">
+          <form class="contact__form grid" action="" method="POST">
             <div class="contact__inputs grid">
               <div class="contact__content">
                 <label for="" class="contact__label">Name</label>
