--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
     <script src="assets/js/main.js"></script>
 
     <!--==================== Contact Validation ====================-->
-    <script src="https://smtpjs.com/v3/smtp.js">
+<!--     <script src="https://smtpjs.com/v3/smtp.js"> -->
 
     
     </script>
