--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                   Redux App adaptable to all devices,with laravel and MySql.
                 </p>
                 <a
-                  href="https://oussamacertificat.tiiny.site/"
+                  href="https://github.com/Oussama-a-kroud""
                   class="button button--flex button--small portfolio__button"
                   target="_blank
                                  "
