--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,9 +159,9 @@
                         </div>
                         <div class="about__buttons">
                             <a download="" href="#" class="button button--flex" onclick="window.open('./assets/pdf/cv-english.pdf')">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
-                            <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-francais.pdf')">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
-<!--                             <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-deutsh.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
- -->
+                            <!-- <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-francais.pdf')">Download CV french<i class="uil uil-download-alt button__icon"></i></a> -->
+                            <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-deutsh.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
+ 
                         </div>
                         
                     </div>
@@ -643,3 +643,4 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
