--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                   class="uil uil-download-alt button__icon"
                 ></i
               ></a>
-              <!-- <a
+              <a
                 download=""
                 href="#"
                 class="button button--flex"
@@ -222,8 +222,8 @@
                 >Download CV french<i
                   class="uil uil-download-alt button__icon"
                 ></i
-              ></a> -->
-              <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/lebenslauf.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
+              ></a>
+              <!-- <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/lebenslauf.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a> -->
             </div>
           </div>
         </div>
@@ -760,5 +760,6 @@
     </script>
   </body>
 </html>
+
 
 
