--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,7 +159,7 @@
                         </div>
                         <div class="about__buttons">
                             <a download="" href="#" class="button button--flex" onclick="window.open('./assets/pdf/cv-english.pdf')">Download CV english<i class="uil uil-download-alt button__icon"></i></a>
-                            <!-- <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-francais.pdf')">Download CV french<i class="uil uil-download-alt button__icon"></i></a> -->
+                            <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/cv-francais.pdf')">Download CV french<i class="uil uil-download-alt button__icon"></i></a>
                             <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/lebenslauf.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a>
  
                         </div>
@@ -643,4 +643,5 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
