--- a/index.html
+++ b/index.html
@@ -223,6 +223,15 @@
                   class="uil uil-download-alt button__icon"
                 ></i
               ></a>
+              <a
+                download=""
+                href="#"
+                class="button button--flex"
+                onclick="window.open('./assets/pdf/lebenslauf.pdf')"
+                >Download CV french<i
+                  class="uil uil-download-alt button__icon"
+                ></i
+              ></a>
               <!-- <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/lebenslauf.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a> -->
             </div>
           </div>
@@ -760,6 +769,7 @@
     </script>
   </body>
 </html>
+
 
 
 
