--- a/index.html
+++ b/index.html
@@ -214,7 +214,17 @@
                   class="uil uil-download-alt button__icon"
                 ></i
               ></a>
+           
               <a
+                download=""
+                href="#"
+                class="button button--flex"
+                onclick="window.open('./assets/pdf/lebenslauf.pdf')"
+                >Download CV germany<i
+                  class="uil uil-download-alt button__icon"
+                ></i
+              ></a>
+                 <!-- <a
                 download=""
                 href="#"
                 class="button button--flex"
@@ -222,17 +232,7 @@
                 >Download CV french<i
                   class="uil uil-download-alt button__icon"
                 ></i
-              ></a>
-              <a
-                download=""
-                href="#"
-                class="button button--flex"
-                onclick="window.open('./assets/pdf/lebenslauf.pdf')"
-                >Download CV french<i
-                  class="uil uil-download-alt button__icon"
-                ></i
-              ></a>
-              <!-- <a download="" href="#" class="button button--flex " onclick="window.open('./assets/pdf/lebenslauf.pdf')">Download CV germany<i class="uil uil-download-alt button__icon"></i></a> -->
+              ></a> -->
             </div>
           </div>
         </div>
@@ -769,6 +769,7 @@
     </script>
   </body>
 </html>
+
 
 
 
