--- a/index.html
+++ b/index.html
@@ -407,10 +407,29 @@
                   <h3 class="qualification__title">Web Full Stack Developer</h3>
                   <span class="qualification__subtitle"> Freelancer </span>
                   <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt">2023-2024</i>
+                    <i class="uil uil-calendar-alt">2023-2025</i>
                   </div>
                 </div>
               </div>
+
+<!-- qualification 2 -->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+                <div>
+                  <h3 class="qualification__title">Web Full Stack Developer</h3>
+                  <span class="qualification__subtitle"> yumlo </span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt">2025</i>
+                  </div>
+                </div>
+              </div>
+
+
+              
             </div>
           </div>
         </div>
@@ -769,6 +788,7 @@
     </script>
   </body>
 </html>
+
 
 
 
