Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -413,22 +413,22 @@
               </div>
 
 <!-- qualification 2 -->
-              <div class="qualification__data">
-                <div></div>
-                
+          <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Web Full Stack Developer</h3>
-                  <span class="qualification__subtitle"> yumlo </span>
+                  <h3 class="qualification__title">Centre Germany Course</h3>
+                  <span class="qualification__subtitle">
+                    German Language School-Morocco
+                  </span>
                   <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt">2025</i>
+                    <i class="uil uil-calendar-alt">2023-2024</i>
                   </div>
                 </div>
+
                 <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
                 </div>
               </div>
-
 
               
             </div>
@@ -789,6 +789,7 @@
     </script>
   </body>
 </html>
+
 
 
 
