--- a/index.html
+++ b/index.html
@@ -395,7 +395,32 @@
             <!-- qualification content 2 -->
 
             <div class="qualification__content" data-content id="work">
-              <!-- qualification 1 -->
+
+<!-- qualification 1 -->
+          <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Full-stack-web Developer (trainee)</h3>
+                  <span class="qualification__subtitle">
+                    Yumlo Full-time 
+                  </span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt">06/2025-12/2025</i>
+                  </div>
+                </div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+
+
+
+
+
+              
+              <!-- qualification 2 -->
 
               <div class="qualification__data">
                 <div></div>
@@ -404,7 +429,7 @@
                   <span class="qualification__line"></span>
                 </div>
                 <div>
-                  <h3 class="qualification__title">Web Full Stack Developer</h3>
+                  <h3 class="qualification__title">Full-stack-web Developer</h3>
                   <span class="qualification__subtitle"> Freelancer </span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt">2023-2025</i>
@@ -412,15 +437,15 @@
                 </div>
               </div>
 
-<!-- qualification 2 -->
+<!-- qualification 3 -->
           <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Centre Germany Course</h3>
+                  <h3 class="qualification__title">Full-stack-web Developer(trainee)</h3>
                   <span class="qualification__subtitle">
-                    German Language School-Morocco
+                    phito bahi
                   </span>
                   <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt">2023-2024</i>
+                    <i class="uil uil-calendar-alt">05/2023-05/2023</i>
                   </div>
                 </div>
 
@@ -789,6 +814,7 @@
     </script>
   </body>
 </html>
+
 
 
 
